--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,80 @@
-.App {
-  text-align: center;
+#root {
+  
+  background-color:#eee;
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
+
+
+
+
+
+.container {
+  max-width:800px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+.flex-parent { display:flex; }
+.flex-child { flex: 1; }
+.flex-none { flex:none }
+
+
+.btn {
+  display:inline-block;
+  padding:0.5em 1em;
+  border-radius:3px;
+  border-width:0;
+  background-color:#eee;
+  -webkit-appearance:none;
+  color:inherit;
+  text-decoration:none;
+  font:inherit;
+}
+
+
+
+
+.card {
+  background-color:white;
+  padding:1em;
+  border-radius:4px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  margin-top:1em;
+  margin-bottom:1em;
+}
+.card>:first-child { margin-block-start:0; }
+.card>:last-child { margin-block-end:0; }
+
+
+
+
+.navbar {
+  background-color: #333d42;
   color: white;
+  line-height: 3rem;
 }
-
-.App-link {
-  color: #09d3ac;
+.navbar h1 {
+  font-size: 1rem;
+  margin: 0;
+}
+.nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.navbar ul {
+  display: flex;
+}
+.navbar a {
+  color: inherit;
+  text-decoration: none;
+  padding: 0 0.6em;
+  display: block;
 }
