--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   
-  background-color:#eee;
+  background-color:#eef2f5;
   
   position: fixed;
   top: 0;
@@ -53,7 +53,7 @@
 .pad>:last-child { margin-block-end:0; }
 
 
-.line-up { border-top:1px solid rgba(0,0,0,0.4); }
+.line-up { border-top:3px solid #e2e4e6; }
 
 
 .navbar {
