--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,20 @@
   height: 100%;
 }
 
+*, *::before, *::after {
+  box-sizing:border-box;
+}
+
+
+
+
+
+a {
+  text-decoration: none;
+  color: #288eda;
+  font-weight:600;
+}
+
 
 
 
@@ -26,18 +40,16 @@
 .flex-none { flex:none }
 
 
-.btn {
-  display:inline-block;
-  padding:0.5em 1em;
-  border-radius:3px;
-  border-width:0;
-  background-color:#eee;
-  -webkit-appearance:none;
-  color:inherit;
-  text-decoration:none;
-  font:inherit;
-}
 
+
+.hero {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: #7aaace;
+}
 
 
 
@@ -78,4 +90,79 @@
   text-decoration: none;
   padding: 0 0.6em;
   display: block;
+}
+
+
+
+
+
+.form-input {
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  background-color: #eef2f5;
+  font: inherit;
+  outline:0;
+  width:100%;
+}
+.form-input:focus {
+  border-bottom-color: #7aaace;
+}
+
+.form-button,
+.btn {
+  display:inline-block;
+  padding:0.5em 1em;
+  border-radius:3px;
+  border-width:0;
+  background-color:#e1e8ea;
+  -webkit-appearance:none;
+  color:inherit;
+  text-decoration:none;
+  font:inherit;
+  cursor:pointer;
+  line-height:1.2;
+}
+
+
+
+
+
+
+
+.hidden { display:none; }
+
+#nav-menu+label {
+	display:none;
+}
+
+@media (max-width:600px) {
+
+  .container {
+    padding-left:0.5em;
+    padding-right:0.5em;
+  }
+
+	#nav-menu+label {
+		display:block;
+		padding:0 1rem;
+		font-size:1.5em;
+	}
+	.navbar>.flex-parent {
+		flex-wrap:wrap;
+	}
+	.navbar .nav {
+		width:100%;
+	}
+	.navbar ul {
+		display:none;
+	}
+	#nav-menu:checked~.nav ul {
+		display:block;
+		padding-bottom:1em;
+	}
+
+	.navbar a {
+		line-height:1.5em;
+	}
 }
